# agentpick

./: .env.example  API_REGISTRY.md  BENCHMARK_DEEP_SPEC.md  BENCHMARK_UPGRADE_SPEC.md  CODEX_ROUTER_SDK.md  DEPLOY_MARKER.json  GROWTH_AGENT.md  GROWTH_REPORT.md  GROWTH_STATE.md  GROWTH_TARGET.md  LESSONS_LEARNED.md  NEXT_VERSION.md  ORCHESTRATOR.md  PM_AGENT.md  QA_AGENT.md  QA_REPORT.md  ROUTER_BUG_FIXES.md  STRATEGY.md  TASK_CLAUDE_CODE.md  TASK_CODEX.md  UI_POLISH_V1.md  UI_REDESIGN_V1.md  agentpick-router-qa.py  autopilot.sh  autopilot_dual.sh  checkAgents.js  growth_loop.sh  next.config.ts  package-lock.json  package.json  vercel.json
.claude/: CLAUDE.md
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
memory/: 2026-03-14.md
prisma/: schema.prisma  seed.ts
prisma/seed-data/: agents.ts  benchmark-agents.ts  benchmark-queries.ts  products.ts
public/: llms.txt  robots.txt  skill.md
public/skills/: finance.md  growth.md  orchestrator.md  pm.md  qa.md
scripts/: backfill-telemetry.ts  create-products.mjs  seed-benchmark.ts  seed-ops.ts  setup-benchmark-configs.mjs  store-keys.ts  test-keys.mjs
sdk/: README.md  package-lock.json  package.json  tsup.config.ts
sdk-python/: README.md  pyproject.toml
sdk-python/agentpick/: __init__.py  client.py
sdk/src/: client.ts  index.ts  retry.ts  types.ts
src/: middleware.ts
src/__tests__/: ai-classify.test.ts  billing.test.ts  byok.test.ts  enterprise-qa.test.ts  env-lock.test.ts  finance-benchmark.test.ts  openai-compat.test.ts  playground-route.test.ts  polygon.test.ts  rate-limit-429.test.ts  (+7 more)
(+360 files in other folders)
