[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentpick"
version = "0.2.0"
description = "Python SDK for AgentPick — AI-powered API routing"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://agentpick.dev/quickstart"
Repository = "https://github.com/agentpick/sdk-python"
